--- a/KontrolWork/app/src/main/res/layout/activity_main.xml
+++ b/KontrolWork/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.Kontrolwork.MainActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="4dp">
+        tools:layout_editor_absoluteY="4dp"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/textView9"
@@ -66,7 +67,7 @@
 
             <Spinner
                 android:id="@+id/spinner_day"
-                android:layout_width="89dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content" />
 
             <Spinner
@@ -202,7 +203,7 @@
             android:layout_height="wrap_content"
             android:layout_x="14dp"
             android:layout_y="673dp"
-            android:onClick="onClick"
+            android:onClick="OnClick"
             android:text="@string/button_text" />
 
     </LinearLayout>
