--- a/KontrolWork/app/src/main/res/values/colors.xml
+++ b/KontrolWork/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#A63100</color>
+    <color name="dark_red">#61001C</color>
+    <color name="light_gray">#BFBFBF</color>
+    <color name="light_green">#00CF7C</color>
+    <color name="dark_green">#008750</color>
+    <color name="light_blue">#0091B5</color>
+    <color name="orange">#F16800</color>
 </resources>
